Tasks: Python-Uploads statt SFTP-Extension, Deploy 11 Sidepanel/Print/LM Dateien, Legend-Proxy-WMS, QGIS-Tab, Git-Batch-Commit
